--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* All text - font and color */
+body, input, button {
+    font-size: 14px;
+    font-family: arial,sans-serif;
+    color: #222;
+}
+
+/* All links - font, color, underlined when hover */
 a {
     text-decoration: none;
     font-size: 14px;
@@ -8,11 +16,13 @@ a:hover {
     text-decoration: underline;
 }
 
+/* Setting Flexbox on entire page */
 .page-flex {
     display: flex;
     flex-direction: column;
 }
 
+/* Navbar settings */
 nav.navbar {
     display: flex;
     justify-content: space-between;
@@ -30,12 +40,35 @@ nav.navbar ul li {
 }
 
 .icon {
-    position: relative;
-    top: 7px
+    vertical-align: middle;
 }
 
-#logo {
-    margin-top:50px;
-    justify-content: center;
+/* Main content (Flexbox) */
+#main-content {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Google logo */
+#logo {
+    display: flex;
+    justify-content: center;
+    
+    max-height: 93px;
+    margin-top: 50px;
+}
+
+/* Search box */
+#search-box {
+    display: flex;
+    align-items: center;
+
+    height: 44px;
+    width: 80%;
+
+    border: #dfe1e5 1px solid;
+    border-radius: 24px;
+    padding: .1em;
+    margin-top: 24px;
 }
